# apebox-rs

./: Cargo.toml  README.md
assets/textures/shirts/: template.pdn
client/: Cargo.toml
client/assets/textures/shirts/: template.pdn
client/src/: barrier.rs  loader.rs  main.rs  networking.rs  states.rs
client/src/ui/: fonts.rs  menu.rs  mod.rs  util.rs  widgets.rs
client/src/ui/game/: combine.rs  draw.rs  mod.rs  prompt.rs  vote.rs  wait.rs
client/src/ui/modes/: combine.rs  draw.rs  mod.rs  prompt.rs  vote.rs  winner.rs
common/: Cargo.toml
common/src/: app.rs  game.rs  lib.rs  protocol.rs  transitions.rs
server/: Cargo.toml
server/src/: game.rs  main.rs  networking.rs  state.rs  states.rs  users.rs
server/src/modes/: combine.rs  draw.rs  mod.rs  prompt.rs  vote.rs
