[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common", version = "0.1.0" }
bevy_quinnet = "0.9"
bevy = { version = "0.14.0", features = ["bevy_dev_tools"] }
bevy_egui = "0.28"
egui = "0.28"
rand = "0.8.5"
crossbeam-channel = "0.5.13"
async-channel = "2.3.1"
thiserror = "1.0.61"
