[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_quinnet = { git = "https://github.com/Henauxg/bevy_quinnet", branch = "bevy-0.14" }
bevy = "0.14.0-rc.3"
serde = { version = "1.0.203", features = ["derive"] }

[profile.dev.package."*"]
debug = false
opt-level = 3
debug-assertions = false
overflow-checks = false
