[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common", version = "0.1.0" }
bevy_quinnet = { git = "https://github.com/Henauxg/bevy_quinnet", branch = "bevy-0.14" }
bevy = { version = "0.14.0-rc.3", features = ["bevy_dev_tools"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
